--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-us">
 
-<header>
+<main>
     <meta charset="UTF-8" />
     <title>Horiseon - Home</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-</header>
+</main>
+
+<!-- End of header -->
 
 <body>
-    <main class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -23,10 +25,12 @@
                 </li>
             </ul>
         </nav>
-    </main>
+    </header>
     <section class="hero"></section>
 
-    <article class="content">
+<!-- End of main img -->
+
+    <article>
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -50,29 +54,33 @@
         </section>
     </article>
 
+<!-- End of article -->
+
     <aside class="benefits">
-        <aside class="benefit-lead">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </aside>
-        <aside class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </aside>
-        <aside class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </aside>
+        </section>
     </aside>
+
+ <!-- End of aside -->
     
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
@@ -81,5 +89,7 @@
         </p>
     </footer>
 </body>
+
+<!-- End of footer -->
 
 </html>
