--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- End of main img -->
 
     <article>
-        <section id="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
