--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <section class="hero"></section>
+    <section id="hero"></section>
 
 <!-- End of main img -->
 
